set continuous integration

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
+os: linux
+rvm: 2.5.1
+dist: trusty
 sudo: false
-language: ruby
-rvm:
-  - 2.4.1
-before_install: gem install bundler -v 1.16.1
+cache: bundler
+before_install:
+  - gem install bundler -v 1.16.1 --no-document,
+  - bundle install
+script:
+  - bundle exec rubocop
+  - bundle exec rspec
